--- a/workspace/example--app--advanced-bundling/src/index.html
+++ b/workspace/example--app--advanced-bundling/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Hello, World! [3]</h1>
-<button onclick="import('./audio--spellbook--turn_page.ts').then(x => console.log(x))">play sound 1</button>
+<button onclick="spellbook()">play sound 1</button>
 <button>play sound 2</button>
 </body>
 </html>
